# capstone2026

ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/flight2/share/flight2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/flight3/share/flight3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/flight_2/lib/flight_2/: my_node
ros2_ws/install/flight_2/share/flight_2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_package/share/my_package/: package.sh
ros2_ws/install/px4_autonomy_modules/share/px4_autonomy_modules/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/vision_bdg/lib/vision_bdg/: vision_bdg
ros2_ws/install/vision_bridge/share/vision_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/vision_bridge/share/vision_bridge/launch/: vision_bridge.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/flight2/: package.xml  setup.cfg  setup.py
ros2_ws/src/flight2/flight2/: comm_node_skeleton.py
ros2_ws/src/flight3/: package.xml  setup.cfg  setup.py
ros2_ws/src/flight3/flight3/: comm_node_skeleton.py
ros2_ws/src/flight_2/: setup.cfg  setup.py
ros2_ws/src/flight_2/flight_2/: my_node.py
ros2_ws/src/px4_autonomy_modules/launch/: mavros.launch.py
ros2_ws/src/vision_bdg/: setup.cfg  setup.py
ros2_ws/src/vision_bdg/vision_bdg/: vision_bdg.py
(+17 files in other folders)
