<?xml version="1.0"?>
<package format="3">
  <name>vision_bridge</name>
  <version>0.0.1</version>
  <description>Bridge for Vicon / Realsense pose to MAVROS vision_pose</description>

  <maintainer email="jetson@nospam">Jetson Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
